; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_mtree.c_mtree_entry_find_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_write_set_format_mtree.c_mtree_entry_find_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtree_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mtree_entry* (%struct.mtree_entry*, i8*)* @mtree_entry_find_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mtree_entry* @mtree_entry_find_child(%struct.mtree_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.mtree_entry*, align 8
  %4 = alloca %struct.mtree_entry*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.mtree_entry*, align 8
  store %struct.mtree_entry* %0, %struct.mtree_entry** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.mtree_entry*, %struct.mtree_entry** %4, align 8
  %8 = icmp eq %struct.mtree_entry* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store %struct.mtree_entry* null, %struct.mtree_entry** %3, align 8
  br label %19

10:                                               ; preds = %2
  %11 = load %struct.mtree_entry*, %struct.mtree_entry** %4, align 8
  %12 = getelementptr inbounds %struct.mtree_entry, %struct.mtree_entry* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @__archive_rb_tree_find_node(i32* %14, i8* %15)
  %17 = inttoptr i64 %16 to %struct.mtree_entry*
  store %struct.mtree_entry* %17, %struct.mtree_entry** %6, align 8
  %18 = load %struct.mtree_entry*, %struct.mtree_entry** %6, align 8
  store %struct.mtree_entry* %18, %struct.mtree_entry** %3, align 8
  br label %19

19:                                               ; preds = %10, %9
  %20 = load %struct.mtree_entry*, %struct.mtree_entry** %3, align 8
  ret %struct.mtree_entry* %20
}

declare dso_local i64 @__archive_rb_tree_find_node(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
